force-app/main/default/objects/Template_macro__c/Template_macro__c.object-meta.xml
<CustomObject>
    <description>Contains a macro used when instantiating a template - the macro computes the name of a template piece using fields in the context of a letter record.</description>
    <label>Template macro</label>
    <nameField>
        <label>Template macro Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template macros</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>