force-app/main/default/objects/Template_macro__c/fields/FS_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Group__c</fullName>
    <description>FS Group to which this template macro belongs (based on owner&apos;s user FS Group).</description>
    <formula>TEXT(Owner:User.FS_Group_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FS Group to which this template macro belongs (based on owner&apos;s user FS Group).</inlineHelpText>
    <label>FS Group</label>
    <type>Text</type>
</CustomField>