force-app/main/default/objects/Template_macro__c/fields/Macro_text__c.field-meta.xml
<CustomField>
    <fullName>Macro_text__c</fullName>
    <description>The text of this template macro</description>
    <inlineHelpText>The text of this template macro</inlineHelpText>
    <label>Macro text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>