force-app/main/default/objects/Template_macro__c/fields/Macro_text_hashcode__c.field-meta.xml
<CustomField>
    <fullName>Macro_text_hashcode__c</fullName>
    <description>The hashcode of the macro text as of the last time the prefix was recalculated</description>
    <inlineHelpText>The hashcode of the macro text as of the last time the prefix was recalculated</inlineHelpText>
    <label>Macro text hashcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>