force-app/main/default/objects/Template_macro__c/fields/Macro_text_prefix__c.field-meta.xml
<CustomField>
    <fullName>Macro_text_prefix__c</fullName>
    <description>The prefix (operator before operands) version of the macro text</description>
    <inlineHelpText>The prefix (operator before operands) version of the macro text</inlineHelpText>
    <label>Macro text prefix</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>