force-app/main/default/objects/Template_macro__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The template parent of this template macro. If blank, then the macro is &quot;generic&quot;.</description>
    <inlineHelpText>The template parent of this template macro. If blank, then the macro is &quot;generic&quot;.</inlineHelpText>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template macros</relationshipLabel>
    <relationshipName>Template_macros</relationshipName>
    <type>Lookup</type>
</CustomField>